--- a/fr/index.html
+++ b/fr/index.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPLB967DYP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-GPLB967DYP');
 </script>
-  <meta charset="utf-8"/>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
-</script>
+
+<meta charset="utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'AW-17377754743');
 </script>
-  <title>Expertise Comptable à Bruxelles | Account-Bel</title>
-  <meta name="description" content="Cabinet d'experts-comptables à Bruxelles. Fiscalité, paie, audit, conseils. Service haut de gamme et personnalisé." />
-  <meta name="keywords" content="expert comptable, comptabilité Bruxelles, fiscalité, entreprise, gestion paie, audit, Account-Bel">
-  <meta name="author" content="Account-Bel SRL">
-  <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://account-bel.be/fr/" />
 
-  <!-- ✅ Préchargement de l'image LCP -->
-  <link rel="preload" href="/home." as="image" type="image/" fetchpriority="high">
+<title>Expertise Comptable à Bruxelles | Account-Bel</title>
+<meta name="description" content="Cabinet d'experts-comptables à Bruxelles. Fiscalité, paie, audit, conseils. Service haut de gamme et personnalisé.">
+<meta name="keywords" content="expert comptable, comptabilité Bruxelles, fiscalité, entreprise, gestion paie, audit, Account-Bel">
+<meta name="author" content="Account-Bel SRL">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://account-bel.be/fr/">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Account-Bel SRL - Cabinet d'expertise comptable à Bruxelles" />
-  <meta property="og:description" content="Découvrez nos services en comptabilité, fiscalité et accompagnement d'entreprise. Un cabinet à votre écoute." />
-<meta property="og:image" content="https://account-bel.be/logo.png" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-<meta property="og:image:alt" content="Logo Account-Bel" />
+<link rel="preload" href="/home.webp" as="image" type="image/webp" fetchpriority="high">
 
-  <meta property="og:url" content="https://account-bel.be/fr/" />
-  <meta property="og:type" content="website" />
+<meta property="og:title" content="Account-Bel SRL - Cabinet d'expertise comptable à Bruxelles">
+<meta property="og:description" content="Découvrez nos services en comptabilité, fiscalité et accompagnement d'entreprise. Un cabinet à votre écoute.">
+<meta property="og:image" content="https://account-bel.be/logo.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Logo Account-Bel">
+<meta property="og:url" content="https://account-bel.be/fr/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Account-Bel">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Account-Bel SRL - Expertise Comptable Bruxelles" />
-  <meta name="twitter:description" content="Cabinet expert-comptable moderne à Bruxelles. Services fiscaux, gestion sociale, accompagnement personnalisé." />
-<meta name="twitter:image" content="https://account-bel.be/logo.png" />
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Account-Bel SRL - Expertise Comptable Bruxelles">
+<meta name="twitter:description" content="Cabinet expert-comptable moderne à Bruxelles. Services fiscaux, gestion sociale, accompagnement personnalisé.">
+<meta name="twitter:image" content="https://account-bel.be/logo.png">
 
-  <!-- Feuilles de style -->
- <link rel="stylesheet" href="../style.css?v=4">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&amp;display=swap" rel="stylesheet"/>
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#000000">
+
+<link rel="stylesheet" href="../style.css?v=4">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<!-- NAVBAR -->
 <nav class="navbar">
   <ul class="nav-left">
     <li><a href="#about">À PROPOS</a></li>
@@ -70,24 +71,22 @@
   </ul>
 
   <div class="logo-wrapper">
-    <a href="#accueil"><img src="/logo." alt="Logo" class="logo-overlap" loading="lazy"/></a>
+    <a href="#accueil"><img src="/logo.webp" alt="Logo" class="logo-overlap" loading="lazy"></a>
   </div>
 
-  <!-- Langues -->
   <div class="lang-switch" aria-label="Choisir la langue">
     <a href="/">FR</a> |
     <a href="/english/">EN</a> |
     <a href="/nederlands/">NL</a> |
-    <a href="/greek/">GR</a> |
+    <a href="/greek/">GR</a>
   </div>
 
   <div class="burger-menu" id="burger">☰</div>
 </nav>
 
 <main class="scroll-container">
-<!-- ACCUEIL -->
 <section class="hero" id="accueil">
-  <img alt="Accueil" class="hero-image" src="/home." width="1920" height="1080" fetchpriority="high" />
+  <img alt="Accueil" class="hero-image" src="/home.webp" width="1920" height="1080" fetchpriority="high">
   <div class="hero-overlay"></div>
   <div class="hero-text">
     <h1>L’EXPERTISE COMPTABLE, RÉINVENTÉE AVEC EXIGENCE</h1>
@@ -97,9 +96,6 @@
   </div>
 </section>
 
-
-
-<!-- À PROPOS -->
 <section class="about" id="about">
   <div class="about-text">
     <h2>À PROPOS D’ACCOUNT-BEL<span class="belgian-flag-img title-flag"></span></h2>
@@ -110,32 +106,30 @@
     <p><strong>Notre mission :</strong> vous faire avancer en toute confiance parce que quand les chiffres sont clairs, l’esprit l’est aussi.</p>
   </div>
   <div class="about-photo-wrapper">
-    <img alt="Michael administrateur" src="/admin." loading="lazy" />
+    <img alt="Michael administrateur" src="/admin.webp" loading="lazy">
     <div class="about-photo-overlay">Michael administrateur</div>
   </div>
 </section>
 
-<!-- SERVICES -->
 <section class="services-section" id="services">
   <h2 class="services-title">NOS SERVICES</h2>
   <div class="services-grid">
-    <div class="service-box"><img alt="" src="/comptabilite." loading="lazy" /><h2>Comptabilité Générale</h2><p>Tenue comptable complète, situations et mise à jour régulières.</p></div>
-    <div class="service-box"><img alt="" src="/fiscalite." loading="lazy" /><h2>Déclarations Fiscales</h2><p>Impôts des sociétés, des personnes physiques, déclarations TVA.</p></div>
-    <div class="service-box"><img alt="" src="/creation." loading="lazy" /><h2>Création d’Entreprise</h2><p>Accompagnement depuis le plan financier jusqu'à la signature de l’acte chez le notaire.</p></div>
-    <div class="service-box"><img alt="" src="/social." loading="lazy" /><h2>Gestion Sociale</h2><p>Accès privilégiés avec de grands partenaires sociaux.</p></div>
-    <div class="service-box"><img alt="" src="/conseil." loading="lazy" /><h2>Conseil en Gestion</h2><p>Accompagnement stratégique, tableaux de bord et pilotage.</p></div>
-    <div class="service-box"><img alt="" src="/bilan." loading="lazy" /><h2>Préparation du Bilan</h2><p>Bilan intermédiaire ou annuel, justification des soldes, audit interne.</p></div>
-    <div class="service-box"><img alt="" src="/juridique." loading="lazy" /><h2>Assistance Juridique</h2><p>Rédaction de statuts, assemblées générales, et conseils juridiques.</p></div>
-    <div class="service-box"><img alt="" src="/audit." loading="lazy" /><h2>Audit Premium</h2><p>Vérification approfondie des comptes avec rapport détaillé.</p></div>
+    <div class="service-box"><img alt="" src="/comptabilite.webp" loading="lazy"><h2>Comptabilité Générale</h2><p>Tenue comptable complète, situations et mise à jour régulières.</p></div>
+    <div class="service-box"><img alt="" src="/fiscalite.webp" loading="lazy"><h2>Déclarations Fiscales</h2><p>Impôts des sociétés, des personnes physiques, déclarations TVA.</p></div>
+    <div class="service-box"><img alt="" src="/creation.webp" loading="lazy"><h2>Création d’Entreprise</h2><p>Accompagnement depuis le plan financier jusqu'à la signature de l’acte chez le notaire.</p></div>
+    <div class="service-box"><img alt="" src="/social.webp" loading="lazy"><h2>Gestion Sociale</h2><p>Accès privilégiés avec de grands partenaires sociaux.</p></div>
+    <div class="service-box"><img alt="" src="/conseil.webp" loading="lazy"><h2>Conseil en Gestion</h2><p>Accompagnement stratégique, tableaux de bord et pilotage.</p></div>
+    <div class="service-box"><img alt="" src="/bilan.webp" loading="lazy"><h2>Préparation du Bilan</h2><p>Bilan intermédiaire ou annuel, justification des soldes, audit interne.</p></div>
+    <div class="service-box"><img alt="" src="/juridique.webp" loading="lazy"><h2>Assistance Juridique</h2><p>Rédaction de statuts, assemblées générales, et conseils juridiques.</p></div>
+    <div class="service-box"><img alt="" src="/audit.webp" loading="lazy"><h2>Audit Premium</h2><p>Vérification approfondie des comptes avec rapport détaillé.</p></div>
   </div>
 </section>
 
-<!-- BLOG -->
 <section class="blog-section" id="blog">
   <h2 class="blog-title">NOTRE BLOG</h2>
   <div class="blog-container">
     <div class="blog-post">
-      <img alt="Facturation électronique" src="/facturation." loading="lazy" />
+      <img alt="Facturation électronique" src="/facturation.webp" loading="lazy">
       <div class="blog-content">
         <h2>Facturation électronique en Belgique</h2>
         <p class="blog-date">26 juin 2025</p>
@@ -147,43 +141,40 @@
   </div>
 </section>
 
-<!-- CONTACT -->
 <section class="page-section contact-section" id="contact">
   <h1 class="contact-title">VOTRE DEMANDE, NOTRE PRIORITÉ</h1>
   <p class="contact-subtext">Que vous soyez client, futur client ou partenaire, nous sommes à votre écoute. Décrivez-nous votre demande, nous reviendrons vers vous dans les meilleurs délais.</p>
   <div class="contact-container">
     <div id="form-wrapper">
       <form action="https://formspree.io/f/mdkzrqly" class="contact-form" id="contactForm" method="POST">
-        <input name="name" placeholder="Prénom &amp; Nom *" required type="text"/>
-        <input name="email" placeholder="Email" type="email"/>
-        <input name="phone" placeholder="Téléphone" type="tel"/>
-        <input name="subject" placeholder="Sujet *" required type="text"/>
+        <input name="name" placeholder="Prénom &amp; Nom *" required type="text">
+        <input name="email" placeholder="Email" type="email">
+        <input name="phone" placeholder="Téléphone" type="tel">
+        <input name="subject" placeholder="Sujet *" required type="text">
         <textarea name="message" placeholder="Votre message *" required rows="6"></textarea>
         <p class="form-note">* Champs obligatoires. Merci d’indiquer au moins un email ou un téléphone.</p>
         <button type="submit">Envoyer</button>
       </form>
       <div class="envelope-animation" id="animationSuccess" style="display: none;">
         <div class="envelope"></div>
-        <p class="success-text">Merci pour votre message.<br/>Nous vous répondrons dans les plus brefs délais.</p>
+        <p class="success-text">Merci pour votre message.<br>Nous vous répondrons dans les plus brefs délais.</p>
       </div>
     </div>
     <div class="contact-image">
-      <img alt="Cabinet professionnel" src="/contact." loading="lazy" />
+      <img alt="Cabinet professionnel" src="/contact.webp" loading="lazy">
     </div>
   </div>
 </section>
 
-<!-- GALERIE -->
 <section class="gallery-section" id="galerie">
   <h2 class="gallery-title">GALERIE</h2>
   <div class="gallery-grid">
-    <div class="gallery-item"><img alt="Photo 2" src="/galerie2."/></div>
-    <div class="gallery-item"><img alt="Photo 4" src="/galerie4."/></div>
+    <div class="gallery-item"><img alt="Photo 2" src="/galerie2.webp" loading="lazy"></div>
+    <div class="gallery-item"><img alt="Photo 4" src="/galerie4.webp" loading="lazy"></div>
   </div>
 </section>
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. TOUS DROITS RÉSERVÉS.</p>
@@ -197,22 +188,20 @@
     <div class="legal-footer">
       <p><small>
         Account-Bel<span class="belgian-flag-img"></span>
-        SRL • BE 0869.701.901 • Avenue du Château 58 boîte 11, 1081 Koekelberg • <a href="mailto:info@account-bel.be">Contact</a><br/>
-        Responsable publication : Michael – Hébergement : Netlify<br/>
+        SRL • BE 0869.701.901 • Avenue du Château 58 boîte 11, 1081 Koekelberg • <a href="mailto:info@account-bel.be">Contact</a><br>
+        Responsable publication : Michael – Hébergement : Netlify<br>
         Ce site utilise des illustrations libres de droits à usage commercial. Données personnelles traitées en toute confidentialité.
       </small></p>
     </div>
   </div>
 </footer>
 
-<!-- JS -->
 <script>
   const burger = document.getElementById('burger');
   const navLeft = document.querySelector('.nav-left');
   burger?.addEventListener('click', () => navLeft.classList.toggle('show'));
 </script>
 
-<!-- (optionnel) cache-busting liens internes -->
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   document.querySelectorAll("a").forEach(link => {
@@ -227,7 +216,7 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+
 <script>
   gtag('event', 'conversion', {
       'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
@@ -235,6 +224,7 @@ document.addEventListener("DOMContentLoaded", function () {
       'currency': 'EUR'
   });
 </script>
-  <script src="../nocache.js"></script>
+
+<script src="../nocache.js"></script>
 </body>
 </html>
